fix overflow on mobile

--- a/_dev/src/scss/components/_reviews.scss
+++ b/_dev/src/scss/components/_reviews.scss
@@ -4,7 +4,8 @@
     position: relative;
     background-size: cover;
     background-repeat: no-repeat;
-
+    max-width: 100vw;
+    overflow: hidden;
     
     .reviews__heading {
         color: #fff;
