--- a/css/theme.css
+++ b/css/theme.css
@@ -1370,7 +1370,7 @@ input[name='last-name'] {
 /* STICKY FOOTER */
 
 #sticky-footer {
-  width: 100%;
+  width: 100vw;
   position: fixed;
   bottom: 0;
   padding: 10px 15px;
